--- a/src/app/cv-section/home/documents/resume/styles/_responsive.sass
+++ b/src/app/cv-section/home/documents/resume/styles/_responsive.sass
@@ -6,8 +6,11 @@
     align-items: flex-start
 
   .cv-header-top
-    flex-direction: column
+    flex-direction: row
     align-items: flex-start
+
+  .cv-actions
+    flex-wrap: wrap
 
   .cv-main
     padding: 24px 16px 40px
